# AvenLab

./: README.md  package-lock.json  package.json
.github/: copilot-instructions.md
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: ColliderVisualizer.tsx  DebugAntiRollBarVisualizer.tsx  DebugLateralForceVisualizer.tsx  DebugLoadBarVisualizer.tsx  DebugNormalForceVisualizer.tsx  DebugRayVisualizer.tsx  DebugSlipAngleVisualizer.tsx  DebugSpringVisualizer.tsx  DebugVisualizer.tsx  DebugWheelVisualizer.tsx  GLBVisualizer.tsx  GeometryVisualizer.tsx  ModeSwitcher.tsx  WorldRenderer.tsx
client/src/controls/: GameController.ts  Keyboard.ts  index.tsx
client/src/effects/: Boost.tsx  Cameras.tsx  Dust.tsx  RotatingCamera.tsx  Skid.tsx  index.ts
client/src/hooks/: usePlayerInput.ts  useSnapshot.ts  useSnapshots.ts
physics-server/: Cargo.toml
physics-server/src/: debug_builders.rs  main.rs  net.rs  physics.rs  spawn.rs  state.rs  suspension_contact.rs  vehicle.rs
physics-server/src/aven_tire/: anti_roll.rs  brush_lite.rs  kinematics.rs  longitudinal.rs  mod.rs  solve.rs  state.rs  steering.rs  types.rs
server/: package-lock.json  package.json  tsconfig.json  vite.config.ts
server/data/: city-building-colliders-multi-box.json  city-building-colliders.json  city-heightfield-v3.json  city-heightfield-v4.json  city-heightfield.json
server/src/: physics.ts  physicsCity.ts  rapier.ts  server.ts  types.ts  vehicleRegistry.ts
shared/types/: physics.ts
(+92 files in other folders)
