[package]
name = "physics-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rapier3d = { version = "0.22", features = ["dim3"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
uuid = { version = "1", features = ["v4"] }